@@ -1,6 +1,7 @@
 package com.java17.interview.prepartion;
 
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -14,10 +15,18 @@ public class StreamAPIUsageOfMapAndSorting {
 
         // find min integer
 
-        Integer result = listOfInt.stream().sorted().findFirst().get();
-        System.out.println(result);
-        List<Integer> results = listOfInt.stream().map(i-> i+ 5).collect(Collectors.toList());
-        System.out.println(results);
+        Integer minResult = listOfInt.stream().sorted().findFirst().get();
+        System.out.println(minResult);
+        List<Integer> plus5results = listOfInt.stream().map(i-> i+ 5).collect(Collectors.toList());
+        System.out.println(plus5results);
+
+        List<Integer> decendingOrder = listOfInt.stream().sorted(Comparator.reverseOrder()).toList();
+        System.out.println(decendingOrder);
+
+        listOfInt.sort(Comparator.reverseOrder());
+
+        List<Integer> increasingOrder = listOfInt.stream().sorted(Comparator.naturalOrder()).toList();
+        System.out.println(increasingOrder);
 
     }
 }
